--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body {
   font-family: "Lacquer", sans-serif;
 }
+
+.box {
+  height: 100vh;
+  width: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
